PR2 updates
